feat(DotNet): Upgrade version do 8.0

--- a/ERS.HotWheels.Collectors.App.API/appsettings.Development.json
+++ b/ERS.HotWheels.Collectors.App.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "HTCContext": "Persist Security Info=False;Initial Catalog=HTCDB;Server=localhost,1433;User ID=sa;Password=htc123!;"
+    "HTCContext": "Persist Security Info=False;Initial Catalog=HTCDB;Server=localhost,1433;User ID=sa;Password=Nv01vdAA.!;"
   },
   "Logging": {
     "LogLevel": {
