--- a/ERS.HotWheels.Collectors.App.API/ERS.HotWheels.Collectors.App.API.csproj
+++ b/ERS.HotWheels.Collectors.App.API/ERS.HotWheels.Collectors.App.API.csproj
@@ -1,20 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.2" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ERS.HotWheels.Collectors.Infra.Context\ERS.HotWheels.Collectors.Infra.Data.Context.csproj" />
+    <ProjectReference Include="..\ERS.HotWheels.Collectors.Infra.Data.Context\ERS.HotWheels.Collectors.Infra.Data.Context.csproj" />
     <ProjectReference Include="..\ERS.HotWheels.Collectors.Infra.IoC\ERS.HotWheels.Collectors.Infra.IoC.csproj" />
-    <ProjectReference Include="..\ERS.HotWheels.Collectors.Interfaces\ERS.HotWheels.Collectors.Domain.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
