--- a/ERS.HotWheels.Collectors.Infra.Data.Repository/ERS.HotWheels.Collectors.Infra.Data.Repository.csproj
+++ b/ERS.HotWheels.Collectors.Infra.Data.Repository/ERS.HotWheels.Collectors.Infra.Data.Repository.csproj
@@ -7,12 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\ERS.HotWheels.Collectors.Domain.Interfaces\ERS.HotWheels.Collectors.Domain.Interfaces.csproj" />
-    <ProjectReference Include="..\ERS.HotWheels.Collectors.Infra.Data.Repository\ERS.HotWheels.Collectors.Infra.Data.Repository.csproj" />
+    <ProjectReference Include="..\ERS.HotWheels.Collectors.Infra.Data.Context\ERS.HotWheels.Collectors.Infra.Data.Context.csproj" />
   </ItemGroup>
 
 </Project>
