--- a/ERS.HotWheels.Collectors.App.API/appsettings.Development.json
+++ b/ERS.HotWheels.Collectors.App.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "HTCContext": "Persist Security Info=False;Initial Catalog=HTCDB;Server=localhost,1433;User ID=sa;Password=Nv01vdAA.!;"
+    "HTCollectors": "Initial Catalog=HTCollectors;Server=127.0.0.1,1433;User ID=sa;Password=SqlServer2022!;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
