--- a/ERS.HotWheels.Collectors.App.MigrationsApplicator/appsettings.json
+++ b/ERS.HotWheels.Collectors.App.MigrationsApplicator/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "HTCContext": "Persist Security Info=False;Initial Catalog=HTCDB;Server=localhost,1433;User ID=sa;Password=SqlServer2022!;"
+    "HTCContext": "Persist Security Info=False;Initial Catalog=HTCollectors;Server=localhost,1433;User ID=sa;Password=SqlServer2022!;"
   }
 }
