--- a/ERS.HotWheels.Collectors.Infra.Data.Migrations/ERS.HotWheels.Collectors.Infra.Data.Migrations.csproj
+++ b/ERS.HotWheels.Collectors.Infra.Data.Migrations/ERS.HotWheels.Collectors.Infra.Data.Migrations.csproj
@@ -7,10 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.4">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ERS.HotWheels.Collectors.Infra.Data.Context\ERS.HotWheels.Collectors.Infra.Data.Context.csproj" />
   </ItemGroup>
 
 </Project>
