--- a/ERS.HotWheels.Collectors.Infra.Cqrs.Commands/ERS.HotWheels.Collectors.Infra.Cqrs.Commands.csproj
+++ b/ERS.HotWheels.Collectors.Infra.Cqrs.Commands/ERS.HotWheels.Collectors.Infra.Cqrs.Commands.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,10 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
+    <Folder Include="Handlers\ToyCarEntity\Update\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ERS.HotWheels.Collectors.Domain.Interfaces\ERS.HotWheels.Collectors.Domain.Interfaces.csproj" />
     <ProjectReference Include="..\ERS.HotWheels.Collectors.Domain\ERS.HotWheels.Collectors.Domain.csproj" />
   </ItemGroup>
 
